// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.decision.v1alpha1;

import "teleport/decision/v1alpha1/denial_metadata.proto";
import "teleport/decision/v1alpha1/permit_metadata.proto";
import "teleport/decision/v1alpha1/request_metadata.proto";
import "teleport/decision/v1alpha1/resource.proto";
import "teleport/decision/v1alpha1/tls_identity.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/decision/v1alpha1;decisionpb";

// EvaluateDatabaseAccessRequest describes a request to evaluate whether or not
// a given database access attempt should be permitted.
message EvaluateDatabaseAccessRequest {
  RequestMetadata metadata = 1;
  TLSIdentity tls_identity = 2;
  Resource database = 3;
}

// EvaluateDatabaseAccessResponse describes the result of a database access
// evaluation.
message EvaluateDatabaseAccessResponse {
  oneof result {
    DatabaseAccessPermit permit = 1;
    DatabaseAccessDenial denial = 2;
  }
}

// DatabaseAccessPermit describes the parameters/constraints of a permissible
// database access attempt.
message DatabaseAccessPermit {
  PermitMetadata metadata = 1;
}

// DatabaseAccessDenial describes a database access denial.
message DatabaseAccessDenial {
  DenialMetadata metadata = 1;
}
